@@ -13,6 +13,11 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   atf_utils_wait utility functions to atf-c-api.  Documented the
   already-public atf_utils_free_charpp function.
 
+* Added the cat_file, compare_file, create_file, fork, grep_file,
+  grep_string, redirect and wait functions to the atf::utils namespace of
+  atf-c++-api.  These are wrappers around the same functions added to the
+  atf-c-api library.
+
 * Miscellaneous fixes for manpage typos and compilation problems with
   clang.
 
